--- a/index.html
+++ b/index.html
@@ -276,76 +276,14 @@
             <p>A fun game of Guessing a number between a range with teh hints to help you! [HTML, CSS,
               JAVASCRIPT, BOOTSTRAP]</p>
             <div class="btns">
-              <a href="https://ishitabisaria.github.io/Guess-My-Number/" class="btn" target="_blank"><i
+              <a href="https://github.com/tinklearora1/2016856_ASSIGNMENT_2" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/IshitaBisaria/Guess-My-Number/" class="btn" target="_blank">Code <i
+              <a href="https://github.com/tinklearora1/2016856_ASSIGNMENT_2" class="btn" target="_blank">Code <i
                   class="fas fa-code"></i></a>
             </div>
           </div>
         </div>
       </div>
-
-      
-      <!-- <div class="box tilt">
-        <img draggable="false" src="./assets/images/projects/Roll The Dice.png" alt="" />
-        <div class="content">
-          <div class="tag">
-            <h3>Roll The Dice</h3>
-          </div>
-          <div class="desc">
-            <p>A fun game of rolling the dice between two players and deciding the winner between them. [HTML, CSS,
-              JAVASCRIPT, BOOTSTRAP]
-            </p>
-            <div class="btns">
-              <a href="https://ishitabisaria.github.io/Roll-The-Dice/" class="btn" target="_blank"><i
-                  class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/IshitaBisaria/Roll-The-Dice" class="btn" target="_blank"><i
-                  class="fas fa-code"></i> Code</a>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-
-
-
-      <!-- <div class="box tilt">
-        <img draggable="false" src="./assets/images/projects/Quiz App.png" alt="" />
-        <div class="content">
-          <div class="tag">
-            <h3>Quiz App</h3>
-          </div>
-          <div class="desc">
-            <p>A fun Quiz App which lets you play a Quiz [HTML, CSS,
-              JAVASCRIPT, BOOTSTRAP]</p>
-            <div class="btns">
-              <a href="https://playaquiz.netlify.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/IshitaBisaria/Quiz-App" class="btn" target="_blank">Code
-                <i class="fas fa-code"></i></a>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-
-      <!-- <div class="box tilt">
-        <img draggable="false" src="./assets/images/projects/Score Keeper.png" alt="" />
-        <div class="content">
-          <div class="tag">
-            <h3>Score Keeper</h3>
-          </div>
-          <div class="desc">
-            <p>A fun game of keeping the Score of a Ping Pong Game. [HTML, CSS, JAVASCRIPT, BOOTSRTAP]</p>
-            <div class="btns">
-              <a href="https://ishitabisaria.github.io/Score-Keeper/" class="btn" target="_blank"><i
-                  class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/IshitaBisaria/Score-Keeper" class="btn" target="_blank">Code <i
-                  class="fas fa-code"></i></a>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
 
       <div class="box tilt">
         <img draggable="false" src="./assets/images/projects/PP.png" alt="" />
@@ -356,9 +294,9 @@
           <div class="desc">
             <p>Personal portfolio website. You're here only!</p>
             <div class="btns">
-              <a href="https://ishitabisaria.github.io/Personal-Portfolio/" class="btn" target="_blank"><i
+              <a href="https://github.com/tinklearora1/Personal-Portfolio/" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/IshitaBisaria/Personal-Portfolio/" class="btn" target="_blank">Code
+              <a href="https://github.com/tinklearora1/Personal-Portfolio/" class="btn" target="_blank">Code
                 <i class="fas fa-code"></i></a>
             </div>
           </div>
@@ -366,14 +304,14 @@
       </div>
 
 
-      <!-- <div class="box tilt">
-        <img draggable="false" src="./assets/images/projects/Twitter Clone.png" alt="" />
+      <div class="box tilt">
+        <img draggable="false" src="./assets/images/projects/netflix.png Clone.png" alt="" />
         <div class="content">
           <div class="tag">
-            <h3>Twitter Clone</h3>
+            <h3>Netflix Clone</h3>
           </div>
           <div class="desc">
-            <p>Clone of Twitter<i class="fas fa-dove" style="color: #1aa1f5;"></i> [HTML, CSS, JAVASCRIPT, BOOTSRTAP]</p>
+            <p>Clone of Netflix<i style="color: #1aa1f5;"></i> [HTML, CSS, BOOTSRTAP]</p>
             <div class="btns">
               <a href="https://ishitabisaria.github.io/Twitter-Clone/" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
@@ -382,16 +320,8 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
-
-
-
-      <!-- <div class="viewall">
-        <a href="https://www.github.com/IshitaBisaria/" class="btn" target="_blank"><span>View All</span>
-          <i class="fas fa-arrow-right"></i>
-        </a>
-      </div> -->
 
   </section>
   <!-- work project section ends -->
@@ -468,14 +398,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-md-2">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><img src="./assets/images/Angular.png" alt="Angular Icon"
-                  style="width:65px;height:65px;"></span>
-            </div>
-          </div>
-        </div> -->
+
         <div class="col-md-2">
           <div class="service-box">
             <div class="service-ico">
@@ -500,14 +423,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-md-2">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><img src="./assets/images/MongoDB.png" alt="MongoDB Icon"
-                  style="width:65px;height:65px;"></span>
-            </div>
-          </div>
-        </div> -->
       </div>
     </div>
 
@@ -563,8 +478,6 @@
               <div class="flip-card-back">
                 <h1 style="margin: 0; font-size: 1.8rem;">5 Star Problem Solving on <a
                     href="https://www.hackerrank.com/tinklearora1" target="_blank">HackerRank</a><br>
-                  <!-- HackerRank Problem Solving (Basic) <a href="https://www.hackerrank.com/certificates/7d866dfa5c89"
-                    target="_blank"> Certificate</a> -->
                 </h1>
               </div>
             </div>
@@ -694,9 +607,6 @@
           <a href="https://www.linkedin.com/in/tinkle-arora-a58192215/" class="fab fa-linkedin" target="_blank"></a>
           <a href="https://github.com/tinklearora1" class="fab fa-github" target="_blank"></a>
           <a href="mailto:tinklearora1@gmail.com" class="fas fa-envelope" target="_blank"></a>
-          <!-- <a href="https://twitter.com/IshitaBisaria" class="fab fa-twitter" target="_blank"></a> -->
-          <!-- <a href="https://www.instagram.com/ishitabisaria/" class="fab fa-instagram" target="_blank"></a> -->
-          <!-- <a href="https://www.medium.com/@ishitabisaria/" class="fab fa-medium" target="_blank"></a> -->
         </div>
       </div>
     </div>
