--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
   <!-- navbar starts -->
   <header>
-    <!-- <a href="https://linktr.ee/IshitaBisaria" class="logo">Tinkle Arora</a> -->
 
     <div id="menu" class="fas fa-bars"></div>
     <nav class="navbar">
@@ -69,12 +68,6 @@
                 class="fab fa-linkedin"></i></a></li>
           <li><a class="github" href="https://github.com/tinklearora1" target="_blank"><i
                 class="fab fa-github"></i></a></li>
-          <!-- <li><a class="twitter" href="https://twitter.com/IshitaBisaria" target="_blank"><i
-                class="fab fa-twitter"></i></a></li> -->
-          <!-- <li><a class="medium" href="https://medium.com/@ishitabisaria" target="_blank"><i
-                class="fab fa-medium"></i></a></li> -->
-          <!-- <li><a class="instagram" href="https://www.instagram.com/ishitabisaria/"><i class="fab fa-instagram"
-                target="_blank"></i></a></li> -->
           <li><a class="gmail" href="mailto:tinklearora1@gmail.com " target="_blank"><i
                 class="fas fa-envelope"></i></a></li>
         </ul>
@@ -250,9 +243,9 @@
           <div class="desc">
             <p>Clone of Netflix<i style="color: #1aa1f5;"></i> [HTML, CSS, BOOTSRTAP]</p>
             <div class="btns">
-              <a href="https://ishitabisaria.github.io/Twitter-Clone/" class="btn" target="_blank"><i
+              <a href="https://github.com/tinklearora1/Netflix-Clone" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/IshitaBisaria/Twitter-Clone" class="btn" target="_blank">Code <i
+              <a href="https://github.com/tinklearora1/Netflix-Clone" class="btn" target="_blank">Code <i
                   class="fas fa-code"></i></a>
             </div>
           </div>
