--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 
       <div class="box tilt">
-        <img draggable="false" src="./assets/images/projects/netflix.png Clone.png" alt="" />
+        <img draggable="false" src="./assets/images/projects/netflix.png" alt="" />
         <div class="content">
           <div class="tag">
             <h3>Netflix Clone</h3>
